--- a/index.html
+++ b/index.html
@@ -4,31 +4,35 @@
         <meta charset="utf-8">
         <meta name="author" content="Papuna Tsiskadze">
         <meta name="description" content="მეხუთე დავალება">
-        <link rel="stylesheet" href="assets/styling.css">
+        <link rel="stylesheet" href="assets/css/styling.css">
         <title>web</title>
     </head>
     <body>
         <header>
             <div class="header-div">
                 <div class="leftpartheader">
-                    <div>
+                    <div class="title">
                         <nav class="navigation">
                             <ul class="maintitle">
                                 <li>Dainpuzzle</li>
                             </ul>
                         </nav>                        
                     </div>
+                    <div class="hco">
                     <nav>
                         <ul class="homebuttonb">
-                            <li>Home</li>
-                        </ul>
-                        <ul>
-                            <li>Catalog</li>
-                        </ul>
-                        <ul>
-                            <li>Orders</li>
+                            <li class="nav-link">Home</li>
+                            <li class="nav-link2">Catalog</li>
+                            <li class="nav-link2">Orders</li>
                         </ul>
                     </nav>
+                    </div>
+                    <div class="rightpartheader">
+                       <div class="marginrightpartheader">
+                        <img class="shopicon" src="assets/icons/istockphoto-1187830689-612x612.jpg">
+                        <img class="customericon" src="/assets/icons/user.jpg">
+                       </div>
+                    </div>
                 </div>
             </div>
         </header>
