--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
                         </ul>
                     </nav>
                     </div>
-                    <div class="rightpartheader">
-                       <div class="marginrightpartheader">
-                        <img class="shopicon" src="assets/icons/istockphoto-1187830689-612x612.jpg">
-                        <img class="customericon" src="/assets/icons/user.jpg">
-                       </div>
-                    </div>
+            </div>
+            <div class="rightpartheader">
+                <div class="marginrightpartheader">
+                    <img class="shopicon" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsLprhT_0mk-SSNU6ZAj4bO_djYKc4pLyn0DWrLYWwzrQRTELX-Gf-_Ukl78a9n2goC3k&usqp=CAU">
+                    <img class="customericon" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAD4m9TcY_CDGclcJ6AhtnKLBgGHKUoUgBOQ&usqp=CAU">
                 </div>
             </div>
+        </div>
         </header>
     </body>
 </html>
