--- a/index.html
+++ b/index.html
@@ -36,5 +36,17 @@
             </div>
         </div>
         </header>
+        <section class="section1">
+            <div class="marcxenanawili">
+                <h1>
+                    Create jigsaw from 
+                your images
+                </h1>
+                <p>
+                    upload image and form
+                </p>
+                <button> begin </button>
+            </div>
+        </section>
     </body>
 </html>
