--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <div class="title">
                         <nav class="navigation">
                             <ul class="maintitle">
-                                <li>Dainpuzzle</li>
+                                <li><a href="index.html">Deinpuzzle</a></li>
                             </ul>
                         </nav>                        
                     </div>
@@ -39,14 +39,21 @@
         <section class="section1">
             <div class="marcxenanawili">
                 <h1>
-                    Create jigsaw from 
-                your images
+                    Create jigsaw from your images
                 </h1>
                 <p>
                     upload image and form
                 </p>
-                <button> begin </button>
+                <button class="btn"> begin </button>
             </div>
+            <div class="marjvenanawili">
+                <img class="photo1" src="https://lh3.googleusercontent.com/VKQlVqQ7EgyQzvawEFamRKL-dczwlHoB_KY2OTuoD_38DgGnuVYrN8O_vr192AOC0alD">
+            </div>
+        </section>
+        <section>
+            <h2>
+                Create jigsaw from your memories 
+            </h2>
         </section>
     </body>
 </html>
