--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h1>
                     Create jigsaw from your images
                 </h1>
-                <p>
+                <p class="ptext">
                     upload image and form
                 </p>
                 <button class="btn"> begin </button>
@@ -50,10 +50,54 @@
                 <img class="photo1" src="https://lh3.googleusercontent.com/VKQlVqQ7EgyQzvawEFamRKL-dczwlHoB_KY2OTuoD_38DgGnuVYrN8O_vr192AOC0alD">
             </div>
         </section>
-        <section>
+        <section class="section2">
+            <div class="section2-1">
             <h2>
                 Create jigsaw from your memories 
             </h2>
+            <p class="ptext2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut provident tempora praesentium nihil, quia, illum exercitationem ratione quod assumenda accusamus esse quasi obcaecati fugit! Sapiente distinctio impedit perferendis earum maxime?</p>
+            </div>            
+            <div class="iconrow">
+                <div class="column5">
+                    <img class="iconimgs" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/279/victory-hand_270c-fe0f.png">
+                    <p class="icontexts">Fun Moments</p>
+                </div>
+                <div class="column5">
+                    <img class="iconimgs" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/285/baby_medium-light-skin-tone_1f476-1f3fc_1f3fc.png">
+                    <p class="icontexts">Baby Moments</p>
+                </div>
+                <div class="column5">
+                    <img class="iconimgs" src="https://i.pinimg.com/originals/eb/2c/00/eb2c000d68c8af5a3b3786b23bd166c6.png">
+                    <p class="icontexts">Graduate Moments</p>
+                </div>
+                <div class="column5">
+                    <img class="iconimgs" src="http://cdn.shopify.com/s/files/1/1061/1924/products/Man_And_Woman_Kiss_Emoji_Icon_ios10_grande.png?v=1571606091">
+                    <p class="icontexts">Love Moments</p>
+                </div>
+                <div class="column5">
+                    <img class="iconimgs" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/118/family-man-woman-girl_1f468-200d-1f469-200d-1f467.png">
+                    <p class="icontexts">Family Moments</p>
+                </div>
+            </div>
+        </section>
+        <section class="section1">
+            <div class="marjvenanawili">
+                <img class="photo1" src="https://www.photomailjoy.com/photo-puzzles/images/custom-photo-puzzle-boyanddog-01@2x.png">
+            </div>
+            <div class="marcxenanawili">
+                <h1>
+                    Create your own jigsaw puzzle!
+                </h1>
+                <p class="ptext2">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, suscipit. Nam vitae, ullam in quia temporibus maxime voluptatibus sit, id ab dolores quaerat amet illo distinctio? Ea laboriosam dolores suscipit.
+                </p>
+                <button class="btn"> begin </button>
+            </div>
+        </section>
+        <section>
+            <div class="section3">
+            <h2>Other people jigsaw</h2> 
+            </div>
         </section>
     </body>
 </html>
