საბოლოო ვერსიის ჩონჩხი

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <div class="title">
                         <nav class="navigation">
                             <ul class="maintitle">
-                                <li><a href="index.html">Deinpuzzle</a></li>
+                                <li><a href="index.html">Denipuzzle</a></li>
                             </ul>
                         </nav>                        
                     </div>
@@ -135,4 +135,50 @@
             </div>
         </section>
     </body>
+    <footer>
+        <section class="footersection">
+            <div class="footerdiv1">
+                <h2 class="maintitle">Denipuzzle</h2>
+                <div>
+                    <p class="bot-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius id quidem quo sit aperiam velit ipsam facilis incidunt, nemo repellat, eaque sint, excepturi deserunt est vero. Inventore soluta atque alias.</p>
+                </div>
+                <div class="botticons">
+                    <img src="https://s3-alpha-sig.figma.com/img/e496/6ffa/fcc785b25428fb44464b8f73ad09366e?Expires=1652659200&Signature=bo4jV9clTqVUrd6jx8SUF5~zDUaoiJtD6jZaI10oIcECu2Ir42ShHKlcIL7ni24~AOkdOIJEURgcMvqvV3ATAbZqDCPJbxHnGkL37DO97DPD4OJrB5Ju5hUz09occGKunnggMlXcQ9sBiDeXhhe6gZu0rQ4736Emz8BjtoFzBt59cQSgsoT~U5RyJCf5eGjnrW5dHcHIlEWqlzSfGVmGg3uFbi-FCc6adKQrbh~NE7nPdbY1LNdt9SFyr-nh7Q8wRvlafk9PLNuFSAxtXx9hU5m3ekzKRC4WO-84og-UpS3YiGIJ7G5Uh29b~pAQvEl5mDo4YYhFMgBTnCMqVMcIXA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA">
+                </div>
+            </div>
+            <div class="footerdiv1">
+                <nav>
+                    <ul class="bottnav1">
+                        <li>Catalog</li>
+                        <li>Orders</li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footerdiv1">
+                <nav>
+                    <ul class="bottnav1">
+                        <li>Catalog</li>
+                        <li>Orders</li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footerdiv1">
+                <nav>
+                    <ul class="bottnav1">
+                        <li>Catalog</li>
+                        <li>Orders</li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footerdiv1">
+                <nav>
+                    <ul class="bottnav1">
+                        <li>Catalog</li>
+                        <li>Orders</li>
+                    </ul>
+                </nav>
+            </div>
+
+        </section>
+    </footer>
 </html>
