--- a/index.html
+++ b/index.html
@@ -149,32 +149,38 @@
             <div class="footerdiv1">
                 <nav>
                     <ul class="bottnav1">
-                        <li>Catalog</li>
-                        <li>Orders</li>
+                        <div class="ulm">
+                        <li class="bot-p1">Catalog</li>
+                        <li class="bot-p1">Orders</li>
+                        </div>
+                    </ul>                    
+                </nav>
+            </div>
+            <div class="footerdiv1">
+                <nav>
+                    <ul class="bottnav1">
+                        <li class="bot-p1">Home</li>
+                        <li class="bot-p1">Catalog</li>
+                        <li class="bot-p1">Orders</li>
+                        <li class="bot-p1">Home</li>
+                        <li class="bot-p1">Catalog</li>
                     </ul>
                 </nav>
             </div>
             <div class="footerdiv1">
                 <nav>
                     <ul class="bottnav1">
-                        <li>Catalog</li>
-                        <li>Orders</li>
+                        <li class="bot-p1">Home</li>
+                        <li class="bot-p1">Catalog</li>
+                        <li class="bot-p1">Orders</li>
+                        <li class="bot-p1"></li>
                     </ul>
                 </nav>
             </div>
             <div class="footerdiv1">
                 <nav>
                     <ul class="bottnav1">
-                        <li>Catalog</li>
-                        <li>Orders</li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="footerdiv1">
-                <nav>
-                    <ul class="bottnav1">
-                        <li>Catalog</li>
-                        <li>Orders</li>
+                        <li class="bot-p12">Copyright © 2021. All rights reserved.</li>
                     </ul>
                 </nav>
             </div>
